test/compile_fail/no_shift_guard_removed.zig
const shift = @import("shift");

comptime {
    _ = shift.NoShiftGuard;
}
